--- a/src/sass/module/_contact__map.scss
+++ b/src/sass/module/_contact__map.scss
@@ -22,6 +22,7 @@
   .contact__map {
     width: 58%;
     padding-top: 41.831%;
+    margin-top: 0;
     margin-left: rem(21);
     text-shadow: none;
   }
