--- a/src/sass/page/_campaign-pre-price.scss
+++ b/src/sass/page/_campaign-pre-price.scss
@@ -4,6 +4,7 @@
   line-height: 1;
   font-size: rem(20);
   font-family: $second-font-family;
+  font-weight: $bold;
   text-decoration: line-through rem(3) $red;
 }
 
