--- a/src/sass/module/_contact-wrapper.scss
+++ b/src/sass/module/_contact-wrapper.scss
@@ -9,7 +9,7 @@
 @include mq("md") {
   .contact-wrapper {
     padding: rem(80) rem(112) rem(80) rem(50);
-    min-width: rem(1080);
+    max-width: rem(1080);
     width: 100%;
     margin: 0 auto;
     flex-direction: row;
