--- a/src/sass/module/_header-inner.scss
+++ b/src/sass/module/_header-inner.scss
@@ -9,8 +9,9 @@
 }
 @include mq("md") {
   .header-inner {
-    max-width: rem(1360);
+    max-width: rem(1400);
     width: 100%;
+    padding: 0 0 0 rem(15);
     margin: 0 auto;
     height: inherit;
   }
