--- a/src/sass/module/_siteMap-contents.scss
+++ b/src/sass/module/_siteMap-contents.scss
@@ -11,11 +11,10 @@
 }
 @include mq("md") {
   .siteMap-contents {
-    margin: 0 auto;
+    margin: rem(-19) auto 0 auto;
     width: 100%;
-    max-width: rem(1008);
+    max-width: rem(1080);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     flex-direction: row;
-    column-gap: rem(40);
   }
 }
