--- a/src/sass/page/_FV-sub-text.scss
+++ b/src/sass/page/_FV-sub-text.scss
@@ -11,5 +11,7 @@
     font-family: $title-font-family;
     font-size: rem(20);
     line-height: 1.65;
+    margin-top: rem(4);
+    margin-left: rem(-40);
   }
 }
