--- a/src/sass/module/_header-inner.scss
+++ b/src/sass/module/_header-inner.scss
@@ -6,11 +6,13 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  width: 100vw;
 }
 @include mq("md") {
   .header-inner {
-    max-width: rem(1360);
+    max-width: rem(1400);
     width: 100%;
+    padding: 0 0 0 rem(15);
     margin: 0 auto;
     height: inherit;
   }
