--- a/src/sass/module/_footer-icons.scss
+++ b/src/sass/module/_footer-icons.scss
@@ -3,6 +3,9 @@
 .footer-icons {
   display: flex;
   flex-direction: column;
+  max-width: rem(500);
+  width: 100%;
+  margin: 0 auto;
 }
 @include mq("md") {
   .footer-icons {
