--- a/src/sass/module/_siteMap-contents.scss
+++ b/src/sass/module/_siteMap-contents.scss
@@ -1,7 +1,8 @@
 @use "global" as *;
 
 .siteMap-contents {
-  max-width: rem(540);
+  max-width: rem(500);
+  margin: 0 auto;
   width: 100%;
   display: grid;
   grid-template-columns: 1.05fr 1fr;
@@ -10,7 +11,8 @@
   color: $white;
 }
 .siteMap-contents--header {
-  margin-top: rem(-17);
+  margin: rem(-17) auto 0 auto;
+  max-width: rem(500);
   column-gap: rem(0);
 }
 @include mq("md") {
