--- a/src/sass/page/_price-contens-wrapper.scss
+++ b/src/sass/page/_price-contens-wrapper.scss
@@ -2,7 +2,9 @@
 .price-contents-wrapper {
   display: flex;
   flex-direction: column;
-  margin-top: rem(28);
+  max-width: rem(500);
+  width: 100%;
+  margin: rem(28) auto auto;
 }
 @include mq("md") {
   .price-contents-wrapper {
