--- a/src/sass/module/_about-us__img.scss
+++ b/src/sass/module/_about-us__img.scss
@@ -10,7 +10,7 @@
   width: 37.101%;
   height: 92%;
   content: "";
-  background-image: url(../../assets/images/common/about-us-left.png);
+  background-image: url(/assets/images/common/about-us-left.png);
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -24,7 +24,7 @@
   width: 81.449%;
   height: 88%;
   content: "";
-  background-image: url(../../assets/images/common/about-us-right.png);
+  background-image: url(/assets/images/common/about-us-right.png);
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -42,7 +42,7 @@
     width: 37.101%;
     height: 92%;
     content: "";
-    background-image: url(../../assets/images/common/about-us-left.png);
+    background-image: url(/assets/images/common/about-us-left.png);
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
@@ -56,7 +56,7 @@
     width: 81.449%;
     height: 88%;
     content: "";
-    background-image: url(../../assets/images/common/about-us-right.png);
+    background-image: url(/assets/images/common/about-us-right.png);
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
