--- a/src/sass/page/_top-blog.scss
+++ b/src/sass/page/_top-blog.scss
@@ -6,8 +6,9 @@
 
 @include mq("md") {
   .top-blog {
+    width: 100%;
     padding-top: rem(100);
-    background-image: url(../../assets/images/common/blog-back.png);
+    background-image: url(/assets/images/common/blog-back.png);
     background-size: contain;
     background-repeat: no-repeat;
     position: relative;
