--- a/src/sass/page/_swiper-button-next.scss
+++ b/src/sass/page/_swiper-button-next.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 .swiper-button-next::after {
-  background-image: url(../../assets/images/common/swiper-next.png);
+  background-image: url(/assets/images/common/swiper-next.png);
   content: "";
   background-size: cover;
   background-repeat: no-repeat;
