--- a/src/sass/page/_top-about-us-decoration.scss
+++ b/src/sass/page/_top-about-us-decoration.scss
@@ -9,6 +9,7 @@
     position: absolute;
     bottom: 7%;
     right: 5.7%;
-    width: rem(194);
+    max-width: rem(194);
+    width: 10.5%;
   }
 }
