--- a/src/sass/page/_top-contact-decoration.scss
+++ b/src/sass/page/_top-contact-decoration.scss
@@ -3,6 +3,7 @@
   position: absolute;
   right: 4%;
   top: 6.5%;
+  max-width: rem(109);
   width: 29%;
   z-index: 10;
 }
@@ -10,6 +11,7 @@
   .top-contact-decoration {
     top: 13.5%;
     right: 3.5%;
+    max-width: rem(301);
     width: 21%;
   }
 }
