--- a/src/sass/page/_top-voice-decoration-under.scss
+++ b/src/sass/page/_top-voice-decoration-under.scss
@@ -10,6 +10,7 @@
     position: absolute;
     bottom: 7.5%;
     right: 12.5%;
+    max-width: rem(71);
     width: 5%;
     height: auto;
     z-index: 10;
