--- a/src/sass/module/_btn.scss
+++ b/src/sass/module/_btn.scss
@@ -10,18 +10,19 @@
   color: $white;
   font-size: rem(14);
   font-family: $title-font-family;
+  z-index: 5;
 }
 //外側二重線
 .btn::before {
   position: absolute;
-  border: 1px solid $green;
-  bottom: -4px;
+  border: rem(1) solid $green;
+  bottom: rem(-4);
   content: "";
   display: inline-block;
-  left: 10px;
-  right: -4px;
-  top: 4px;
-  z-index: -1;
+  left: rem(10);
+  right: rem(-4);
+  top: rem(4);
+  z-index: 3;
 }
 //矢印
 .btn span {
@@ -32,17 +33,17 @@
   margin-left: rem(8);
   vertical-align: middle;
   line-height: 1;
-  background: currentColor;
+  background: $white;
 }
 .btn span::after {
   content: "";
+  position: absolute;
   width: rem(10);
-  border: rem(1) solid currentColor;
+  border: rem(1.3) solid $white;
   border-left: 0;
   border-bottom: 0;
   transform: rotate(40deg);
   transform-origin: top right;
-  position: absolute;
   top: 0;
   right: 0;
   box-sizing: border-box;
