--- a/src/sass/page/_top-campaign-slide.scss
+++ b/src/sass/page/_top-campaign-slide.scss
@@ -2,4 +2,5 @@
 .top-campaign-slide {
   box-shadow: rem(2) rem(2) rem(10) rgba($color: #000000, $alpha: 0.25);
   background-color: $white;
+  opacity: 1;
 }
