--- a/src/sass/module/_cards.scss
+++ b/src/sass/module/_cards.scss
@@ -11,6 +11,7 @@
 @include mq("md") {
   .cards {
     flex-direction: row;
+    flex-wrap: wrap;
     max-width: rem(1080);
     width: 100%;
     column-gap: rem(40);
