--- a/src/sass/page/_price-menus.scss
+++ b/src/sass/page/_price-menus.scss
@@ -4,8 +4,8 @@
   font-size: rem(14);
   line-height: 1.71428;
   display: flex;
-  justify-content: space-between;
   margin-top: rem(8);
+  column-gap: rem(15);
 }
 @include mq("md") {
   .price-menus {
