--- a/src/sass/module/_title.scss
+++ b/src/sass/module/_title.scss
@@ -5,6 +5,7 @@
   line-height: 1.5;
   border-bottom: solid rem(1) $green;
   font-weight: $bold;
+  margin-top: 0;
 }
 .title--big {
   font-size: rem(20);
