--- a/src/sass/module/_btn.scss
+++ b/src/sass/module/_btn.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 //ボタン本体
-.btn {
+/*.btn {
   position: relative;
   width: rem(202);
   display: inline-block;
@@ -48,32 +48,71 @@
   right: 0;
   box-sizing: border-box;
 }
-/*
-.c-btn.slide {
-  background: #fff;
-  color: #ff701e;
-  overflow: hidden;
+*/
+
+.btn {
   position: relative;
-  z-index: 1;
+  width: rem(202);
+  display: inline-block;
+  padding: rem(16) rem(0);
+  text-align: center;
+  font-size: rem(14);
+  font-family: $title-font-family;
+  z-index: 5;
+  background: $green;
+  color: $white;
+  overflow: hidden;
 }
-.c-btn.slide::after {
-  background: #ff701e;
+.btn::before {
+  position: absolute;
+  border: rem(1) solid $green;
+  bottom: rem(-4);
+  content: "";
+  display: inline-block;
+  left: rem(10);
+  right: rem(-4);
+  top: rem(4);
+  z-index: 3;
+}
+.btn::after {
+  background: $white;
   position: absolute;
   top: 0;
   left: 0;
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
   transform: scale(0, 1);
   transform-origin: left top;
-  transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
-  z-index: -1;
+  transition: 0.2s cubibezier(0.45, 0, 0.55, 1);
+  z-index: 3;
 }
-.c-btn.slide:hover {
-  color: #fff;
+.btn:hover {
+  color: $green;
 }
-.c-btn.slide:hover::after {
+.btn:hover::after {
   transform: scale(1, 1);
 }
- 
-*/
+.btn span {
+  position: relative;
+  display: inline-block;
+  width: rem(40);
+  height: rem(1);
+  margin-left: rem(8);
+  vertical-align: middle;
+  line-height: 1;
+  background: $white;
+}
+.btn span::after {
+  content: "";
+  position: absolute;
+  width: rem(10);
+  border: rem(1.3) solid $white;
+  border-left: 0;
+  border-bottom: 0;
+  transform: rotate(40deg);
+  transform-origin: top right;
+  top: 0;
+  right: 0;
+  box-sizing: border-box;
+}
