--- a/src/sass/module/_header-inner.scss
+++ b/src/sass/module/_header-inner.scss
@@ -6,7 +6,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  width: 100%;
 }
 @include mq("md") {
   .header-inner {
