--- a/src/sass/module/_about-us__img-left.scss
+++ b/src/sass/module/_about-us__img-left.scss
@@ -1,13 +1,21 @@
 @use "global" as *;
 .about-us__img-left {
-  object-fit: cover;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  aspect-ratio: 128/194;
+  position: relative;
+  aspect-ratio: 128 / 194;
+  width: 37.03%;
 }
 .about-us__img-left > img {
-  width: 50%;
-  height: 50%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   object-fit: cover;
+}
+
+@include mq("md") {
+  .about-us__img-left {
+    aspect-ratio: 400 / 606;
+  }
 }
