--- a/src/sass/module/_about-us__img-right.scss
+++ b/src/sass/module/_about-us__img-right.scss
@@ -1,13 +1,24 @@
 @use "global" as *;
 .about-us__img-right {
-  aspect-ratio: 281/186;
-  top: 0;
-  right: 0;
+  width: 83%;
+  aspect-ratio: 281 / 186;
+  position: relative;
+  position: absolute;
   z-index: -1;
-  padding-top: 54%;
+  right: 0;
+  bottom: -10%;
 }
 .about-us__img-right > img {
+  position: absolute;
   width: 100%;
   height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   object-fit: cover;
+}
+@include mq("md") {
+  .about-us__img-right {
+    aspect-ratio: 880 / 581;
+  }
 }
