--- a/src/sass/module/_about-us__img.scss
+++ b/src/sass/module/_about-us__img.scss
@@ -1,6 +1,9 @@
 @use "global" as *;
 
 .about-us__img {
-  position: relative;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
 }
