--- a/src/sass/module/_btn.scss
+++ b/src/sass/module/_btn.scss
@@ -1,98 +1,34 @@
 @use "global" as *;
 //ボタン本体
-/*.btn {
-  position: relative;
-  width: rem(202);
-  display: inline-block;
-  padding: rem(16) rem(0);
-  text-align: center;
-  background-color: $green;
-  color: $white;
-  font-size: rem(14);
-  font-family: $title-font-family;
-  z-index: 5;
-}
-//外側二重線
-.btn::before {
-  position: absolute;
-  border: rem(1) solid $green;
-  bottom: rem(-4);
-  content: "";
-  display: inline-block;
-  left: rem(10);
-  right: rem(-4);
-  top: rem(4);
-  z-index: 3;
-}
-//矢印
-.btn span {
-  position: relative;
-  display: inline-block;
-  width: rem(40);
-  height: rem(1);
-  margin-left: rem(8);
-  vertical-align: middle;
-  line-height: 1;
-  background: $white;
-}
-.btn span::after {
-  content: "";
-  position: absolute;
-  width: rem(10);
-  border: rem(1.3) solid $white;
-  border-left: 0;
-  border-bottom: 0;
-  transform: rotate(40deg);
-  transform-origin: top right;
-  top: 0;
-  right: 0;
-  box-sizing: border-box;
-}
-*/
-
 .btn {
   position: relative;
+  display: inline-block;
   width: rem(202);
-  display: inline-block;
-  padding: rem(16) rem(0);
-  text-align: center;
-  font-size: rem(14);
-  font-family: $title-font-family;
-  z-index: 5;
-  background: $green;
+  padding: rem(16) 0;
+  background-color: $green;
   color: $white;
-  overflow: hidden;
-}
-.btn::before {
-  position: absolute;
-  border: rem(1) solid $green;
-  bottom: rem(-4);
-  content: "";
-  display: inline-block;
-  left: rem(10);
-  right: rem(-4);
-  top: rem(4);
-  z-index: 3;
-}
-.btn::after {
-  background: $white;
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 100%;
-  transform: scale(0, 1);
-  transform-origin: left top;
-  transition: 0.2s cubibezier(0.45, 0, 0.55, 1);
-  z-index: 3;
+  font-family: $title-font-family;
+  font-size: rem(14);
+  line-height: 1.5714;
+  text-align: center;
+  z-index: 5;
 }
 .btn:hover {
   color: $green;
 }
-.btn:hover::after {
-  transform: scale(1, 1);
+//ボタン二重線
+.btn::before {
+  position: absolute;
+  border: rem(1) solid $green;
+  top: rem(4);
+  left: rem(10);
+  right: rem(-4);
+  bottom: rem(-4);
+  content: "";
+  display: inline-block;
+  z-index: -1;
 }
+//ボタン矢印
 .btn span {
   position: relative;
   display: inline-block;
@@ -102,12 +38,16 @@
   vertical-align: middle;
   line-height: 1;
   background: $white;
+  z-index: inherit;
+}
+.btn span:hover {
+  color: $green;
 }
 .btn span::after {
   content: "";
   position: absolute;
   width: rem(10);
-  border: rem(1.3) solid $white;
+  border: rem(1.8) solid $white;
   border-left: 0;
   border-bottom: 0;
   transform: rotate(40deg);
@@ -115,4 +55,31 @@
   top: 0;
   right: 0;
   box-sizing: border-box;
+  z-index: inherit;
+}
+//アニメーション
+.btn::after {
+  position: absolute;
+  background-color: $white;
+  border: rem(1) solid $green;
+  color: $green;
+  content: "";
+  display: inline-block;
+  height: 100%;
+  left: 0;
+  top: 0;
+  transform: scale(0, 1);
+  transform-origin: left top;
+  transition: 0.2s cubic-bezier(0.45, 0, 0.55, 1);
+  width: 100%;
+  z-index: -1;
+}
+.btn:hover::after {
+  transform: scale(1, 1);
+}
+.btn:hover span {
+  background-color: $green;
+}
+.btn:hover span::after {
+  border: rem(1.3) solid $green;
 }
