--- a/src/sass/module/_card__body.scss
+++ b/src/sass/module/_card__body.scss
@@ -5,6 +5,8 @@
 }
 .card__body--campaign {
   padding: rem(16);
+  display: flex;
+  flex-direction: column;
 }
 .card__body--blog {
   margin-top: rem(24);
