--- a/src/sass/module/_card__category.scss
+++ b/src/sass/module/_card__category.scss
@@ -6,6 +6,7 @@
   border: solid rem(1) $green;
   line-height: 1.833333;
   padding: rem(4) rem(12);
+  width: fit-content;
 }
 @include mq("md") {
   .card__category {
