--- a/src/sass/module/_card__contents.scss
+++ b/src/sass/module/_card__contents.scss
@@ -1,11 +1,12 @@
 @use "global" as *;
 
 .card__contents {
-  margin-top: rem(8);
+  margin-top: auto;
+  flex-grow: 1;
 }
 @include mq("md") {
   .card__contents {
-    margin-top: rem(16);
+    margin-top: auto;
     line-height: 1.5;
   }
 }
