--- a/src/sass/page/_top-blog.scss
+++ b/src/sass/page/_top-blog.scss
@@ -9,7 +9,7 @@
     width: 100%;
     padding-top: rem(100);
     background-image: url(/assets/images/common/blog-back.png);
-    background-size: contain;
+    background-size: 100% 60%;
     background-repeat: no-repeat;
     position: relative;
   }
