--- a/src/sass/page/_top-campaign-slide.scss
+++ b/src/sass/page/_top-campaign-slide.scss
@@ -3,4 +3,5 @@
   box-shadow: rem(2) rem(2) rem(10) rgba($color: #000000, $alpha: 0.25);
   background-color: $white;
   opacity: 1;
+  height: auto;
 }
