--- a/src/sass/module/_title.scss
+++ b/src/sass/module/_title.scss
@@ -6,7 +6,8 @@
   line-height: 1.5;
   border-bottom: solid rem(1) $green;
   font-weight: $bold;
-  margin-top: 0;
+  flex-shrink: 0;
+  margin-top: auto;
 }
 .title--big {
   font-size: rem(20);
