--- a/src/sass/page/_about-us__texts.scss
+++ b/src/sass/page/_about-us__texts.scss
@@ -7,13 +7,12 @@
 
 @include mq("md") {
   .about-us__texts {
-    max-width: rem(840);
-    width: 58.3333%;
+    width: min(rem(840), 80%);
     position: absolute;
     grid-template-columns: 1fr 1fr;
     column-gap: rem(40);
     color: $white;
     top: 38.5%;
-    left: 26.5%;
+    right: 14%;
   }
 }
