--- a/src/sass/module/_siteMap-contents.scss
+++ b/src/sass/module/_siteMap-contents.scss
@@ -22,7 +22,7 @@
     margin: rem(-19) auto 0 auto;
     width: 100%;
     max-width: rem(1080);
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     flex-direction: row;
   }
 }
