--- a/src/sass/module/_about-us__img.scss
+++ b/src/sass/module/_about-us__img.scss
@@ -1,9 +1,53 @@
 @use "global" as *;
 
 .about-us__img {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   position: relative;
+  padding-top: 5rem;
+}
+//about us背景画像左側
+.about-us__img-left {
+  position: relative;
+  aspect-ratio: 128 / 194;
+  width: 37.03%;
+  overflow: hidden;
+}
+.about-us__img-left > img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+}
+
+@include mq("md") {
+  .about-us__img-left {
+    aspect-ratio: 400 / 606;
+  }
+}
+//about us背景画像右側
+.about-us__img-right {
+  width: 83%;
+  aspect-ratio: 281 / 186;
+  position: relative; //写真比率管理用
+  position: absolute;
+  z-index: -1;
+  right: 0;
+  bottom: -10%;
+  overflow: hidden;
+}
+.about-us__img-right > img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+}
+@include mq("md") {
+  .about-us__img-right {
+    aspect-ratio: 880 / 581;
+  }
 }
