--- a/src/sass/module/_card.scss
+++ b/src/sass/module/_card.scss
@@ -1,5 +1,5 @@
 @use "global" as *;
-
+//カード本体（枠）
 .card {
   padding-top: rem(16);
   padding-left: rem(16);
@@ -17,12 +17,86 @@
 @include mq("md") {
   .card--voice {
     padding: rem(24);
-    width: 47%;
   }
-  .card--blog {
-    width: 30%;
+}
+//カード画像
+.card__img {
+  position: relative;
+  padding-top: 66.966%;
+}
+.card__img > img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+}
+@include mq("md") {
+  .card__img {
+    padding-top: 67.142%;
   }
-  .card--blog:nth-child(3) {
-    column-gap: 0;
+}
+//カード内容全体
+.card__contents {
+  margin-top: auto;
+  flex-grow: 1;
+}
+@include mq("md") {
+  .card__contents {
+    margin-top: auto;
+    line-height: 1.5;
+  }
+}
+//カード本文をまとめたもの
+.card__body {
+  margin-top: rem(0);
+}
+.card__body--campaign {
+  padding: rem(16);
+  display: flex;
+  flex-direction: column;
+}
+.card__body--blog {
+  margin-top: rem(24);
+}
+@include mq("md") {
+  .card__body--campaign {
+    padding: rem(24) rem(16) rem(33) rem(16);
+  }
+  .card__body--blog {
+    margin-top: rem(18);
+  }
+}
+
+//カード本文
+.card__text {
+  padding-top: rem(16);
+  margin-top: 0;
+}
+@include mq("md") {
+  .card__text {
+    padding-top: rem(40);
+  }
+}
+//カテゴリー
+.card__category {
+  display: inline-block;
+  font-size: rem(12);
+  color: $green;
+  border: solid rem(1) $green;
+  line-height: 1.833333;
+  padding: rem(4) rem(12);
+  width: fit-content;
+}
+@include mq("md") {
+  .card__category {
+    display: inline-block;
+    font-size: rem(12);
+    color: $green;
+    border: solid rem(1) $green;
+    line-height: 1.833333;
+    padding: rem(6) rem(16);
   }
 }
