--- a/src/sass/module/_pc-nav.scss
+++ b/src/sass/module/_pc-nav.scss
@@ -12,10 +12,11 @@
   .pc-nav ul {
     display: flex;
     flex-direction: row;
+    gap: rem(25);
     height: inherit;
   }
   .pc-nav li {
-    padding: 0 rem(20);
+    display: inline-block;
     height: inherit;
   }
 
@@ -34,23 +35,19 @@
 
   .pc-nav li a::after {
     content: "";
-    /*絶対配置で線の位置を決める*/
     position: absolute;
     bottom: rem(27);
     left: 0;
-    /*線の形状*/
     width: 100%;
     height: rem(1);
     background: $white;
-    /*アニメーションの指定*/
     transition: all 0.3s;
-    transform: scale(0, 1); /*X方向0、Y方向1*/
+    transform: scale(0, 1);
     transform-origin: center top; /*上部中央基点*/
   }
-
   /*現在地とhoverの設定*/
   .pc-nav li.current a::after,
   .pc-nav li a:hover::after {
-    transform: scale(1, 1); /*X方向にスケール拡大*/
+    transform: scale(1, 1);
   }
 }
