--- a/src/sass/page/_campaign-text.scss
+++ b/src/sass/page/_campaign-text.scss
@@ -3,10 +3,12 @@
   text-align: center;
   line-height: 1.71428;
   font-size: rem(14);
+  margin-top: rem(8);
 }
 @include mq("md") {
   .campaign-text {
     line-height: 1.5;
     font-size: rem(16);
+    margin-top: rem(16);
   }
 }
