--- a/src/sass/page/_top-about-us-decoration.scss
+++ b/src/sass/page/_top-about-us-decoration.scss
@@ -8,7 +8,7 @@
     display: block;
     position: absolute;
     bottom: 7%;
-    right: 5.7%;
+    right: calc(50% - min(48.4vw, 38.75rem));
     max-width: rem(194);
     width: 10.5%;
   }
