--- a/src/sass/page/_top-price.scss
+++ b/src/sass/page/_top-price.scss
@@ -9,3 +9,18 @@
     position: relative;
   }
 }
+//装飾
+.top-price-decoration {
+  display: none;
+}
+@include mq("md") {
+  .top-price-decoration {
+    display: block;
+    position: absolute;
+    bottom: 4.7%;
+    left: 6.5%;
+    max-width: rem(437);
+    width: 30.7%;
+    z-index: 10;
+  }
+}
