--- a/src/sass/page/_top-voice-decoration-under.scss
+++ b/src/sass/page/_top-voice-decoration-under.scss
@@ -9,7 +9,7 @@
     display: block;
     position: absolute;
     bottom: 7.5%;
-    right: 12.5%;
+    right: calc(50% - min(48.4vw, 38.75rem));
     max-width: rem(71);
     width: 5%;
     height: auto;
