--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -1,4 +1,5 @@
 @use "global" as *;
+//フッター全体
 .footer {
   padding: rem(48) 0 rem(56);
   background-color: $green;
@@ -8,5 +9,53 @@
 @include mq("md") {
   .footer {
     padding: rem(80) 0;
+  }
+}
+//フッターインナー
+.footer-inner {
+  padding: 0 rem(15) 0 rem(15);
+}
+//フッターCodeUpsロゴ
+.footer-logo {
+  width: rem(120);
+  height: auto;
+}
+@include mq("md") {
+  .footer-logo {
+    width: rem(200);
+  }
+}
+//フッターCodeUpsロゴ・SNSロゴ周り
+.footer-icons {
+  display: flex;
+  flex-direction: column;
+  max-width: rem(500);
+  width: 100%;
+  margin: 0 auto;
+}
+@include mq("md") {
+  .footer-icons {
+    max-width: rem(1080);
+    width: 100%;
+    margin: 0 auto;
+    flex-direction: row;
+    align-items: flex-end;
+  }
+}
+//フッターSNSロゴ周り
+.footer-sns-logos {
+  margin-top: rem(18.25);
+  display: flex;
+  flex-direction: row;
+  margin-left: rem(0);
+  column-gap: rem(18.25);
+}
+
+@include mq("md") {
+  .footer-sns-logos {
+    margin-top: rem(0);
+    margin-left: rem(40);
+    padding-bottom: rem(10);
+    column-gap: rem(22.5);
   }
 }
