--- a/src/sass/page/_top-blog.scss
+++ b/src/sass/page/_top-blog.scss
@@ -1,9 +1,9 @@
 @use "global" as *;
+//トップブログセクション
 .top-blog {
   padding-top: rem(80);
   background-image: none;
 }
-
 @include mq("md") {
   .top-blog {
     width: 100%;
@@ -12,5 +12,31 @@
     background-size: 100% 60%;
     background-repeat: no-repeat;
     position: relative;
+  }
+}
+//トップブログカード周り
+.top-blog-cards-wrapper {
+  margin-top: rem(28);
+  display: flex;
+  flex-direction: column;
+}
+@include mq("md") {
+  .top-blog-cards-wrapper {
+    margin-top: rem(80);
+  }
+}
+//トップブログ装飾
+.top-blog-decoration {
+  display: none;
+}
+@include mq("md") {
+  .top-blog-decoration {
+    display: block;
+    position: absolute;
+    top: 3%;
+    left: calc(50% - min(48.4vw, 38.75rem));
+    max-width: rem(437);
+    width: 30.5%;
+    z-index: 10;
   }
 }
