--- a/src/sass/module/_btn-wrapper.scss
+++ b/src/sass/module/_btn-wrapper.scss
@@ -3,6 +3,7 @@
 .btn-wrapper {
   margin-top: rem(40);
   text-align: center;
+  padding-bottom: rem(5);
 }
 .btn-wrapper--about {
   margin-top: rem(25);
