--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -1,13 +1,6 @@
 @use "global" as *;
-//お問い合わせセクション全体余白
 .contact {
-  padding: rem(81) 0 rem(105);
   position: relative;
-}
-@include mq("md") {
-  .contact {
-    padding: rem(140) 0 rem(160);
-  }
 }
 //お問い合わせ全体
 .contact-wrapper {
@@ -15,13 +8,14 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  margin: rem(54) auto 0 auto;
 }
 @include mq("md") {
   .contact-wrapper {
     padding: rem(80) rem(112) rem(80) rem(50);
     max-width: rem(1080);
     width: 100%;
-    margin: 0 auto;
+    margin: rem(140) auto 0 auto;
     flex-direction: row;
     box-shadow: rem(2) rem(2) rem(10) rgba($color: #000000, $alpha: 0.25);
   }
@@ -29,7 +23,7 @@
 //お問い合わせ装飾
 .contact-decoration {
   position: absolute;
-  right: 4%;
+  right: calc(50% - min(48.4vw, 38.75rem));
   top: 6.5%;
   max-width: rem(109);
   width: 29%;
