--- a/src/sass/page/_top-about-us.scss
+++ b/src/sass/page/_top-about-us.scss
@@ -1,10 +1,79 @@
 @use "global" as *;
+//トップabout us全体
 .top-about-us {
   position: relative;
-  padding: rem(83) 0 rem(74);
+  margin-top: rem(80);
 }
 @include mq("md") {
   .top-about-us {
-    padding: rem(145) 0 rem(164);
+    margin-top: rem(140);
+  }
+}
+//トップabout us画像全体
+.top-about-us__img-wrapper {
+  max-width: rem(500);
+  width: 100%;
+  margin: rem(28) auto 0 auto;
+}
+@include mq("md") {
+  .top-about-us__img-wrapper {
+    margin: rem(40) auto 0 auto;
+    max-width: rem(1100);
+    width: 100%;
+  }
+}
+//トップabout us装飾
+.top-about-us-decoration {
+  display: none;
+}
+@include mq("md") {
+  .top-about-us-decoration {
+    display: block;
+    position: absolute;
+    bottom: 7%;
+    right: calc(50% - min(48.4vw, 38.75rem));
+    max-width: rem(194);
+    width: 10.5%;
+  }
+}
+//トップのみテキスト
+.top-about-us__texts {
+  margin-top: rem(41);
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+@include mq("md") {
+  .top-about-us__texts {
+    width: min(rem(840), 80%);
+    position: absolute;
+    grid-template-columns: 1fr 1fr;
+    column-gap: rem(40);
+    color: $white;
+    top: 38.5%;
+    right: calc(50% - min(48.4vw, 31.75rem));
+  }
+}
+.top-about-us__main-text {
+  font-size: rem(40);
+  line-height: 1;
+  font-family: $title-font-family;
+  color: $green;
+}
+@include mq("md") {
+  .top-about-us__main-text {
+    font-size: rem(80);
+    line-height: 1.125;
+    color: $white;
+  }
+}
+.top-about-us__text {
+  margin-top: rem(16);
+  font-weight: $regular;
+}
+
+@include mq("md") {
+  .top-about-us__text {
+    margin-top: rem(0);
   }
 }
