--- a/src/sass/page/_top-campaign.scss
+++ b/src/sass/page/_top-campaign.scss
@@ -1,19 +1,25 @@
 @use "global" as *;
 //トップキャンペーンセクション全体
 .top-campaign {
-  padding-top: rem(40);
+  margin-top: rem(40);
   overflow: hidden;
 }
 @include mq("md") {
   .top-campaign {
-    padding-top: rem(120);
+    margin-top: rem(120);
   }
 }
 //トップキャンペーンスライダー周り
 .top-campaign-wrapper {
-  padding: rem(25) 0;
+  margin-top: rem(24);
+  padding-bottom: rem(10);
   z-index: 10;
   overflow: hidden;
+}
+@include mq("md") {
+  .top-campaign-wrapper {
+    margin-top: rem(40);
+  }
 }
 //スライダーボタンrelative用
 @include mq("md") {
@@ -21,10 +27,61 @@
     position: relative;
   }
 }
+//スライダーボタン周り
+.top-swiper-button-wrapper {
+  display: none;
+}
+
+@include mq("md") {
+  .top-swiper-button-wrapper {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    top: 0%;
+    right: 0%;
+    width: rem(240);
+    height: rem(80);
+    z-index: 5;
+    padding: rem(1);
+  }
+}
+//スライダーボタン左
+.top-swiper-button-prev::after {
+  background-image: url(/assets/images/common/slider-left-arrow.png);
+  content: "";
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: rem(80);
+  height: rem(80);
+  display: block;
+  margin: auto;
+  top: 0;
+}
+//スライダーボタン右
+.top-swiper-button-next::after {
+  background-image: url(/assets/images/common/slider-right-arrow.png);
+  content: "";
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: rem(80);
+  height: rem(80);
+  display: block;
+  margin: auto;
+  top: 0;
+}
 //キャンペーン各スライド
 .top-campaign-slide {
   box-shadow: rem(2) rem(2) rem(10) rgba($color: #000000, $alpha: 0.25);
   background-color: $white;
   opacity: 1;
+  width: rem(280);
   height: auto;
+  margin-right: rem(24);
+}
+@include mq("md") {
+  .top-campaign-slide {
+    width: rem(333);
+    margin-right: rem(40);
+  }
 }
