--- a/src/sass/page/_top-price.scss
+++ b/src/sass/page/_top-price.scss
@@ -13,7 +13,7 @@
   }
 }
 //トップ料金、メニュー＆写真全体
-.top-price-contents-wrapper {
+.top-price__contents-wrapper {
   display: flex;
   flex-direction: column;
   max-width: rem(500);
@@ -21,7 +21,7 @@
   margin: rem(28) auto auto;
 }
 @include mq("md") {
-  .top-price-contents-wrapper {
+  .top-price__contents-wrapper {
     flex-direction: row-reverse;
     column-gap: rem(93);
     margin: rem(40) auto 0 auto;
@@ -31,26 +31,26 @@
 }
 
 //トップ料金、メニュー全体
-.top-price-contents {
+.top-price__contents {
   width: 100%;
   margin-top: rem(40);
 }
 @include mq("md") {
-  .top-price-contents {
+  .top-price__contents {
     width: 50%;
     margin-top: rem(0);
   }
 }
 //トップ料金、カテゴリーごと
-.top-price-content {
+.top-price__content {
   margin-top: rem(40);
 }
-.top-price-content:first-child {
+.top-price__content:first-child {
   margin-top: 0;
 }
 
 //トップ料金、メニュー名＆料金
-.top-price-menus {
+.top-price__menus {
   font-size: rem(14);
   line-height: 1.71428;
   display: flex;
@@ -58,13 +58,13 @@
   column-gap: rem(15);
 }
 @include mq("md") {
-  .top-price-menus {
+  .top-price__menus {
     font-size: rem(16);
     line-height: 1.5;
   }
 }
 //トップ料金、メニュー名
-.top-price-menu {
+.top-price__menu {
   width: 80%;
 }
 //トップ料金、料金
@@ -73,12 +73,12 @@
   text-align: end;
 }
 //トップ料金、写真
-.top-price-img {
+.top-price__img {
   width: 100%;
   position: relative;
   aspect-ratio: 345/227;
 }
-.top-price-img > source {
+.top-price__img > source {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -88,18 +88,18 @@
   object-fit: cover;
 }
 @include mq("md") {
-  .top-price-img {
+  .top-price__img {
     width: 50%;
     aspect-ratio: 746/492;
   }
 }
 
 //装飾
-.top-price-decoration {
+.top-price__decoration {
   display: none;
 }
 @include mq("md") {
-  .top-price-decoration {
+  .top-price__decoration {
     display: block;
     position: absolute;
     bottom: 4.7%;
