--- a/src/sass/page/_top-voice.scss
+++ b/src/sass/page/_top-voice.scss
@@ -10,23 +10,23 @@
   }
 }
 //トップお客様の声周り
-.top-voice-card-wrapper {
+.top-voice__card-wrapper {
   margin: rem(40) auto 0 auto;
   display: flex;
   flex-direction: column;
 }
 
 @include mq("md") {
-  .top-voice-card-wrapper {
+  .top-voice__card-wrapper {
     margin-top: rem(30);
   }
 }
 //トップお客様の声、装飾上
-.top-voice-decoration-upper {
+.top-voice__decoration-upper {
   display: none;
 }
 @include mq("md") {
-  .top-voice-decoration-upper {
+  .top-voice__decoration-upper {
     display: block;
     position: absolute;
     top: 2.5%;
@@ -36,11 +36,11 @@
   }
 }
 //トップお客様の声、装飾下
-.top-voice-decoration-under {
+.top-voice__decoration-under {
   display: none;
 }
 @include mq("md") {
-  .top-voice-decoration-under {
+  .top-voice__decoration-under {
     display: block;
     position: absolute;
     bottom: 7.5%;
