--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -4,35 +4,43 @@
 }
 //お問い合わせ全体
 .contact-wrapper {
-  text-align: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
   margin: rem(54) auto 0 auto;
 }
 @include mq("md") {
   .contact-wrapper {
-    padding: rem(80) rem(112) rem(80) rem(50);
+    margin: rem(140) auto 0 auto;
+  }
+}
+//お問い合わせインナー
+.contact-inner {
+  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+@include mq("md") {
+  .contact-inner {
+    padding: rem(70) rem(112) rem(70) rem(50);
     max-width: rem(1080);
     width: 100%;
-    margin: rem(140) auto 0 auto;
     flex-direction: row;
     box-shadow: rem(2) rem(2) rem(10) rgba($color: #000000, $alpha: 0.25);
   }
 }
+
 //お問い合わせ装飾
 .contact-decoration {
   position: absolute;
-  right: calc(50% - min(48.4vw, 38.75rem));
-  top: 6.5%;
+  right: calc(50% - min(46.4vw, 38.75rem));
+  top: -0.8%;
   max-width: rem(109);
   width: 29%;
   z-index: 10;
 }
 @include mq("md") {
   .contact-decoration {
-    top: 13.5%;
-    right: calc(50% - min(48.4vw, 38.75rem));
+    top: -8.5%;
+    right: calc(50% - min(48.4vw, 41.75rem));
     max-width: rem(301);
     width: 21%;
   }
@@ -43,7 +51,7 @@
 }
 @include mq("md") {
   .contact__info-wrapper {
-    margin-top: rem(24);
+    margin-top: rem(18);
   }
 }
 //お問い合わせ左側住所と地図まとまり
@@ -81,7 +89,6 @@
 
 @include mq("md") {
   .contact__address {
-    width: 33.2%;
     text-align: left;
   }
 }
@@ -100,10 +107,9 @@
 .contact__map {
   position: relative;
   width: 100%;
-  padding-top: 54.237%;
+  aspect-ratio: 295/160;
   background-color: #d9d9d9;
   margin: rem(16) auto 0 auto;
-
   text-shadow: 0 rem(4) rem(4) rgba($color: #000, $alpha: 0.25);
 }
 .contact__map > iframe {
@@ -117,11 +123,10 @@
 }
 @include mq("md") {
   .contact__map {
-    width: 62%;
-    padding-top: 33.65%;
+    aspect-ratio: 273/148;
     margin-top: 0;
-    margin-left: rem(21);
     text-shadow: none;
+    width: 164%;
   }
 }
 //お問い合わせ右側
@@ -131,7 +136,7 @@
 @include mq("md") {
   .contact__content {
     margin-top: rem(0);
-    padding-left: rem(80);
+    margin-left: rem(80);
   }
 }
 //お問い合わせ右側テキスト
