--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 //フッター全体
 .footer {
-  margin-top: rem(160);
+  margin-top: rem(100);
   padding: rem(48) 0 rem(56) 0;
   background-color: $green;
   color: $white;
@@ -9,25 +9,26 @@
 }
 @include mq("md") {
   .footer {
+    margin-top: rem(160);
     padding: rem(80) 0;
   }
 }
 //フッターインナー
-.footer-inner {
+.footer__inner {
   padding: 0 rem(15) 0 rem(15);
 }
 //フッターCodeUpsロゴ
-.footer-logo {
+.footer__logo {
   width: rem(120);
   height: auto;
 }
 @include mq("md") {
-  .footer-logo {
+  .footer__logo {
     width: rem(200);
   }
 }
 //フッターCodeUpsロゴ・SNSロゴ周り
-.footer-icons {
+.footer__icons {
   display: flex;
   flex-direction: column;
   max-width: rem(500);
@@ -35,7 +36,7 @@
   margin: 0 auto;
 }
 @include mq("md") {
-  .footer-icons {
+  .footer__icons {
     max-width: rem(1080);
     width: 100%;
     margin: 0 auto;
@@ -44,7 +45,7 @@
   }
 }
 //フッターSNSロゴ周り
-.footer-sns-logos {
+.footer__sns-logos {
   margin-top: rem(18.25);
   display: flex;
   flex-direction: row;
@@ -53,10 +54,20 @@
 }
 
 @include mq("md") {
-  .footer-sns-logos {
+  .footer__sns-logos {
     margin-top: rem(0);
     margin-left: rem(40);
     padding-bottom: rem(10);
-    column-gap: rem(22.5);
+    column-gap: rem(20);
+  }
+}
+//各SNS
+.footer__sns-logo {
+  width: rem(19.5);
+  height: auto;
+}
+@include mq("md") {
+  .footer__sns-logo {
+    width: rem(24);
   }
 }
