--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -24,9 +24,9 @@
 }
 @include mq("md") {
   .header-inner {
-    max-width: rem(1400);
     width: 100%;
     margin: 0 auto;
+    padding: 0 rem(40);
     height: inherit;
   }
 }
