--- a/src/sass/page/_top-campaign.scss
+++ b/src/sass/page/_top-campaign.scss
@@ -56,6 +56,7 @@
   display: block;
   margin: auto;
   top: 0;
+  cursor: pointer;
 }
 //スライダーボタン右
 .top-campaign__swiper-button-next::after {
@@ -68,6 +69,7 @@
   display: block;
   margin: auto;
   top: 0;
+  cursor: pointer;
 }
 //キャンペーン各スライド
 .top-campaign__slide {
