--- a/src/sass/page/_FV-texts.scss
+++ b/src/sass/page/_FV-texts.scss
@@ -8,6 +8,9 @@
   text-align: center;
   transform: translate(-50%, -50%);
 }
+.FV-texts--loading {
+  color: $green;
+}
 @include mq("md") {
   .FV-texts {
     top: 49%;
