--- a/src/sass/module/_siteMap.scss
+++ b/src/sass/module/_siteMap.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 //サイトマップ
-.siteMap-contents {
+.siteMap__contents {
   max-width: rem(500);
   margin: 0 auto;
   width: 100%;
@@ -11,14 +11,14 @@
   background-color: $green;
   color: $white;
 }
-.siteMap-contents--header {
+.siteMap__contents--header {
   height: calc(100vh - rem(80));
   margin: rem(-17) auto 0 auto;
   max-width: rem(500);
   column-gap: rem(8);
 }
 @include mq("md") {
-  .siteMap-contents {
+  .siteMap__contents {
     width: 100%;
     max-width: rem(1080);
     flex-direction: row;
@@ -34,7 +34,7 @@
   }
 }
 //リストマーク付きのところ
-.siteMap-main-title {
+.siteMap__main-title {
   background: url(../../assets/images/common/site-map-list-icon.png) no-repeat 0 0;
   background-size: auto rem(18);
   padding-left: rem(22);
@@ -44,23 +44,23 @@
   list-style: none;
 }
 //リストマークつかないところ
-.siteMap-sub-title {
+.siteMap__sub-title {
   margin-left: rem(22);
   margin-top: rem(24);
   line-height: 1.125;
 }
 //PCの時並べ替え
 @include mq("md") {
-  .siteMap-main--order1 {
+  .siteMap__main--order1 {
     order: 1;
   }
-  .siteMap-main--order2 {
+  .siteMap__main--order2 {
     order: 2;
   }
-  .siteMap-main--order3 {
+  .siteMap__main--order3 {
     order: 3;
   }
-  .siteMap-main--order4 {
+  .siteMap__main--order4 {
     order: 4;
   }
 }
